[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "Joel Payne", email = "lilspazjoekp@gmail.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "aiohttp <4",
  "yarl"
]
dynamic = ["version", "description"]
keywords = ["praw", "reddit", "api", "async", "asynchronous", "asyncpraw"]
license = {file = "LICENSE.txt"}
maintainers = [
  {name = "Joel Payne", email = "lilspazjoekp@gmail.com"}
]
name = "asyncprawcore"
readme = "README.rst"
requires-python = "~=3.9"

[project.optional-dependencies]
dev = [
  "asyncprawcore[lint]",
  "asyncprawcore[test]"
]
lint = [
  "pre-commit",
  "ruff ==0.9.*"
]
test = [
  "pyright",
  "pytest ==7.*",
  "pytest-asyncio ==0.18.*",
  "pytest-vcr ==1.*",
  "urllib3 ==1.*",
  "vcrpy ==4.2.1"
]

[project.urls]
"Issue Tracker" = "https://github.com/praw-dev/asyncprawcore/issues"
"Source Code" = "https://github.com/praw-dev/asyncprawcore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"
testpaths = "tests"

[tool.ruff]
include = [
  "examples/*.py",
  "asyncprawcore/*.py",
  "tests/*.py"
]
line-length = 120

[tool.ruff.lint]
ignore = [
  "A002", # shadowing built-in
  "ANN202", # missing return type for private method
  "ASYNC109", # Async function definition with a `timeout` parameter
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "E501", # line-length
  "PLR0913" # too many arguments
]
select = [
  "A", # flake8-builtins
  "ANN", # flake8-annotations
  "ASYNC", # flake8-async
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "D", # pydocstyle
  "DTZ", # flake8-datetimez
  "E", # pycodestyle errors
  "EM", # flake8-errmsg
  "ERA", # eradicate
  "EXE", # flake8-executable
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FIX", # flake8-fix me
  "FLY", # flynt
  "G", # flake8-logging-format
  "I", # isort
  "INP", # flake8-no-pep420
  "ISC", # flake8-implicit-str-concat
  "N", # pep8-naming
  "PIE", # flake8-pie
  "PGH", # pygrep-hooks
  "PL", # Pylint
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "S", # bandit
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "TD", # flake8-todos
  "W", # pycodestyle warnings
  "UP" # pyupgrade
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"pre_push.py" = ["T201"]
"examples/*.py" = ["ANN", "PLR2004", "T201"]
"tests/**.py" = ["ANN", "D", "PLR2004", "S101", "S105", "S106", "S301"]
